UI fixes- Alignment issues

--- a/ziksana-app/ziksana-web/src/main/webapp/resources/css/main/styles2.css
+++ b/ziksana-app/ziksana-web/src/main/webapp/resources/css/main/styles2.css
@@ -971,7 +971,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fdfdfd', end
 
 #contentpanel {
     margin-bottom: 30px;
-    overflow: auto;min-height: 494px;
+    overflow: auto;
 }
 
 .profileinput {
@@ -3042,4 +3042,5 @@ label.mandatory:before {
   margin-right: 10px;
   overflow: hidden;
   text-align: right;
+  padding:1px;
 }
